<resources>
  <string name="app_name">InstallPackages</string>
  <string name="connect">Connect</string>
  <string name="disconnect">Disconnect</string>
  <string name="reset">Reset</string>
  <string name="share">Share</string>
  <string name="forkremote">Fork Remote</string>
  <string name="forklocal">Fork Local</string>
  <string name="count">Count</string>
  <string name="cleanremote">Clean Remote</string>
  <string name="cleanlocal">Clean Local</string>
  <string name="ofdlock">OFD Lock</string>
  <string name="deadlock">Deadlock</string>
  <string name="broadcast">Broadcast</string>
  <string name="orderedbroadcast">OrderedBroadcast</string>
  <string name="providerresolver">ProviderResolver</string>
  <string name="providerclient">Client</string>
</resources>