<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstallPackagesActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">
    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
      <EditText
          android:id="@+id/editInterval"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ems="4"
          android:inputType="number"
          android:minHeight="48dp"
          android:text="10" />
      <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/switchCount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minHeight="48dp"
          android:text="@string/count" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast" />
    <Button
        android:id="@+id/buttonOrderedBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderedbroadcast" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
      <Button
          android:id="@+id/buttonProviderResolver"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/providerresolver" />
      <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/switchClient"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minHeight="48dp"
          android:text="@string/providerclient" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonDeadlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadlock" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
      <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/switchOFD"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minHeight="48dp"
          android:text="@string/ofdlock" />
      <Button
          android:id="@+id/buttonShare"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonForkRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forkremote" />
    <Button
        android:id="@+id/buttonForkLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forklocal" />
    <Button
        android:id="@+id/buttonCleanRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cleanremote" />
    <Button
        android:id="@+id/buttonCleanLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cleanlocal" />
    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />
    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>